--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cocreate/rollup",
   "version": "1.0.1",
-  "description": "An intergration with Rollup and CoCreateJS.",
+  "description": "A Rollup integration tool for CoCreate applications, enabling file watching, automated chunking, lazy loading, and file uploading. It leverages CoCreate.config for streamlined project builds and development workflows.",
   "keywords": [
     "rollup",
     "cocreate",
