--- a/package.json
+++ b/package.json
@@ -4,20 +4,17 @@
   "description": "A Rollup integration tool for CoCreate applications, enabling file watching, automated chunking, lazy loading, and file uploading. It leverages CoCreate.config for streamlined project builds and development workflows.",
   "keywords": [
     "rollup",
-    "cocreate",
+    "CoCreate",
+    "automation",
+    "file watching",
+    "chunking",
+    "lazy loading",
+    "file uploading",
     "low-code-framework",
-    "no-code-framework",
     "cocreatejs",
-    "cocreatejs-component",
     "cocreate-framework",
-    "no-code",
     "low-code",
-    "collaborative-framework",
     "realtime",
-    "realtime-framework",
-    "collaboration",
-    "shared-editing",
-    "html5-framework",
     "javascript-framework"
   ],
   "publishConfig": {
