--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "A Rollup integration tool for CoCreate applications, enabling file watching, automated chunking, lazy loading, and file uploading. It leverages CoCreate.config for streamlined project builds and development workflows.",
   "keywords": [
     "rollup",
-    "CoCreate",
+    "cocreate",
     "automation",
-    "file watching",
+    "file-watching",
     "chunking",
-    "lazy loading",
-    "file uploading",
+    "lazy-loading",
+    "file-uploading",
     "low-code-framework",
     "cocreatejs",
     "cocreate-framework",
